fast/stages/03-gke-multitenant/config/cluster/ns-must-have-geo-constraint_v1beta_gatekeeper.yml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-must-have-geo
  annotations:
    configsync.gke.io/cluster-name-selector: gke-1
spec:
  enforcementAction: dryrun
  match:
    excludedNamespaces: 
    - "kube-system"
    - "kube-public"
    - "kube-node-lease"
    - "resource-group-system"
    - "config-management-monitoring"
    - "config-management-system"
    - "cos-auditd"
    - "gatekeeper-system"
    - "kube-node-lease"
    - "cnrm-system"
    - "gke-mcs"
    - "configconnector-operator-system"
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    labels:
      - key: "geo"
